deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: boards-io
  labels:
    app: boards-io
spec:
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: boards-io
    spec:
      volumes:
      - name: pg-data
        persistentVolumeClaim:
          claimName: pg-data-claim
      - name: data
        hostPath: 
          path: /vol-data
      containers:
      - name: boards-io
        image: gcr.io/boards-io/boards-io:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9082

      - name: datomic
        image: gcr.io/boards-io/datomic:latest
        volumeMounts:
          - mountPath: /data
            name: data
        ports:
        - containerPort: 4334
        - containerPort: 4335
        - containerPort: 4336
          
      - name: postgres
        image: postgres
        ports:
          - containerPort: 5432
          
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: pg-data
